delete admin user, get all app users, get all customer
