# api/controllers/AdminUserController.js
@@ -5,8 +5,9 @@ const AdminUserService = require('../services/AdminUserService');
 
 module.exports = {
     getAllUsers,
+    getAllCustomers,
     // getUserDetail,
-    // deleteUser,
+    deleteUser,
     // updateUserDetail,
     // getUserActivities,
     addUser,
@@ -24,6 +25,19 @@ function getAllUsers(req, res, next) {
         res.json(yield AdminUserService.getAllUsers(req.auth, req.swagger.params));
     }).catch(next);
 }
+
+/**
+ * Get all the customers
+ *
+ * @param req the request
+ * @param res the response
+ */
+function getAllCustomers(req, res, next) {
+    co(function* () {
+        res.json(yield AdminUserService.getAllCustomers(req.auth, req.swagger.params));
+    }).catch(next);
+}
+
 /**
 * Add a user
 *
@@ -35,3 +49,15 @@ function addUser(req, res, next) {
         res.json(yield AdminUserService.addUser(req.auth, req.body));
     }).catch(next);
 }
+
+/**
+ * Delete an admin user identified by unique id
+ *
+ * @param req the request
+ * @param res the response
+ */
+function deleteUser(req, res, next) {
+    co(function* (){
+      res.json(yield AdminUserService.deleteUser(req.auth, req.swagger.params.id.value));
+    }).catch(next);
+  }
